# TerraLab

./: .gitignore  License.txt  README.md  TODO.md  build_exe.ps1  config.json  environment.yml  pyproject.toml  requirements.txt  run_terralab.ps1  run_tests.py  setup.iss  setup.py
TerraLab/: README.md  __init__.py  __main__.py  config.py  setup.py  test_dome_scale.py  test_engine_bake.py  test_rasterio_order.py  test_rasterio_swap.py  test_star_math.py
TerraLab/assets/: horizon_profile.npz
TerraLab/astro/: __init__.py  ngc_catalog.py
TerraLab/common/: __init__.py  app_paths.py  custom_widget_base.py  locks.py  utils.py
TerraLab/data/: assets_manager.py  config.json  stars_dataset.py  translations.json
TerraLab/layers/: __init__.py  village.py
TerraLab/light_pollution/: __init__.py  bortle.py  calibration.py  dvnl_io.py  kernels.py  mlim.py
TerraLab/render/: grid_renderer.py  horizon_renderer.py  overlays_renderer.py  sky_renderer.py  stars_renderer.py
TerraLab/scene/: camera.py  projection.py  render_context.py  scene_state.py
TerraLab/terrain/: __init__.py  bake_process.py  engine.py  light_pollution_sampler.py  overlay.py  providers.py  worker.py
TerraLab/tools/: __init__.py  convert_planck_dust.py  download_gaia_tap.py  import_gaia_catalog.py
TerraLab/ui/: onboarding_dialogs.py  sky_controller.py  (+2 more)
docs/: pipeline.md
scripts/: build_stars_dataset.py  calibrate_sqm.py  check_lp_domes.py  debug_lp.py  dvnl_convolve.py  dvnl_preprocess.py  predict_mlim.py  predict_sqm_raster.py  verify_industrial_lp.py
tests/: test_config.py  test_providers.py
(+25 files in other folders)
